Fix several layout issues

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -97,8 +97,7 @@ svg {
 
 // General UI elements
 .btn {
-    height: 3em;
-    width: 10em;
+    padding: 0.5rem 2rem;
 
     background: $color-btn-pri;
     border: $border-btn;
